# norma

./: README.md  __init__.py  core.py  interactive.py  io.py  max_sel_full_new.py  plotting.py  pyproject.toml  utils.py
norma/: __init__.py  core.py  interactive.py  io.py  plotting.py  utils.py
norma/scripts/: norma_identify.py  norma_select.py
scripts/: norma_identify.py  norma_select.py
