[project]
name = "norma"
version = "0.1.2"
description = "Astronomy spectra fitting utilities"
readme = "README.md"
authors = [
	{ name = "Jordan A. Simpson" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = [
	"astronomy",
	"fitting",
	"ascii"
]
dependencies = [
	"numpy>=1.23.0",
	"scipy>=1.9.0",
	"pandas>=1.5",
	"matplotlib>=3.5.0"
]

[project.urls]
repository = "https://github.com/jsimpson-astro/norma"

[project.scripts]
norma-identify = "norma.scripts.norma_identify:main"
norma-select = "norma.scripts.norma_select:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"